--- a/src/styles.css
+++ b/src/styles.css
@@ -24,8 +24,10 @@ body{
 }
 
 .app{
+	flex-direction: column;
     align-items: center;
     padding: 1rem;
     border-radius: 5px;
     box-shadow: 0 0 25px rgba(0,0,0,0.3);
 }
+
