Add click event to button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app-cont">
   <div class="app">
     <app-header></app-header>
-	<app-button></app-button>
+	<app-button text="+" (btnClick)="AddTask()"></app-button>
   </div>
 </div>
