Add tasks objects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <div class="app">
     <app-header></app-header>
 	<app-button text="+" (btnClick)="AddTask()"></app-button>
+	<app-tasks></app-tasks>
   </div>
 </div>
