--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,4 @@
-<p>tasks works!</p>
+<div class="list-of-task-cont">
+    <app-task-item *ngFor="let task of tasks" [task]="task">
+    </app-task-item>
+</div>
