--- a/src/styles.css
+++ b/src/styles.css
@@ -19,15 +19,54 @@ body{
 }
 
 .app-cont{
+    align-items: center;
+    height: 100vh;
     width: 100%;
     padding: 1.5rem 2rem;
 }
 
 .app{
+    width: 100%;
+    max-width: 600px;
 	flex-direction: column;
-    align-items: center;
+    /*align-items: center;*/
     padding: 1rem;
     border-radius: 5px;
     box-shadow: 0 0 25px rgba(0,0,0,0.3);
 }
 
+.form-cont{
+    align-self: center;
+    margin-top: 4px;
+    margin-bottom: 1rem;
+}
+
+.btn > button{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: transparent;
+	padding: 8px 18px;
+	font-size: 1.5rem;
+	outline: none;
+	border: 1px solid transparent;
+	border-radius: 5px;
+	cursor: pointer;
+	font-family: montserrat, sans-serif;
+	box-shadow: 0 0 5px rgba(0,0,0,0.2);
+	transition: 0.3s;
+}
+
+.btn > button:hover{
+	border: 1px solid #000;
+	box-shadow: 0 0 0 rgba(0,0,0,0.2);
+}
+
+.closer{
+    transition: 0.3s;
+    color: red;
+}
+
+.btn > button:hover, .btn > button:hover .closer{
+    color: #fff;
+}
