Add functionality to delete task items

--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,4 +1,4 @@
 <div class="list-of-task-cont">
-    <app-task-item *ngFor="let task of tasks" [task]="task">
+    <app-task-item *ngFor="let task of tasks" [task]="task" (onDeleteTask)="deleteTask(task)">
     </app-task-item>
 </div>
