--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -8,6 +8,6 @@
     
     <div class="left">
         <fa-icon class="icon" [icon]="faPaintBrush"></fa-icon>
-        <fa-icon class="icon closer" [icon]="faTimes"></fa-icon>
+        <fa-icon class="icon closer" (click)="onDelete(task)" [icon]="faTimes"></fa-icon>
     </div>
 </div>
