Add input field and checkboxes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <app-header></app-header>
 	  
     <div class="form-cont">
+      <app-form></app-form>
       <app-button text="+" (btnClick)="AddTask()"></app-button>
 	  </div>
     <app-tasks></app-tasks>
