--- a/src/app/components/task-item/task-item.component.css
+++ b/src/app/components/task-item/task-item.component.css
@@ -9,6 +9,7 @@
 
 .left, .right{
     display: flex;
+    align-items: center;
 }
 
 .checkbox-cont, .icon:first-child{
@@ -27,4 +28,39 @@
 
 .icon:hover{
     color: #fff;
+}
+
+.checkbox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    -webkit-appearance: none;
+    padding: 12px;
+    background-color: #fff;
+    border-radius: 3px;
+    border: 2px solid #000;
+    outline: none;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.checkbox:checked{
+    border: 2px solid #fff;
+    background-color: #000;
+}
+
+.checkbox:checked:after {
+	content: "";
+	top: 3px;
+	border-color: #fff;
+	border-style: solid;
+	border-width: 0 3px 3px 0;
+	transform: rotate(45deg);
+	width: 5px;
+	height: 12px;
+	color: #fff;
+	font-size: 1rem;
+	font-weight: bold;
+	position: absolute;
 }
