--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,13 +1,13 @@
 <div class="task-item">
     <div class="right">
         <div class="checkbox-cont">
-            <span>CheckBox</span>
+            <input type="checkbox" class="checkbox" (click)="Onclick($event)">
         </div>
         <span>{{ task.task }}</span>
     </div>
     
     <div class="left">
-        <fa-icon class="icon" [icon]="faPaintBrush"></fa-icon>
+        <fa-icon class="icon" [icon]="faPaintBrush" (click)="onUpdate()"></fa-icon>
         <fa-icon class="icon closer" (click)="onDelete(task)" [icon]="faTimes"></fa-icon>
     </div>
 </div>
