--- a/src/styles.css
+++ b/src/styles.css
@@ -30,14 +30,16 @@ body{
     width: 100%;
     max-width: 600px;
 	flex-direction: column;
-    /*align-items: center;*/
     padding: 1rem;
     border-radius: 5px;
     box-shadow: 0 0 25px rgba(0,0,0,0.3);
 }
 
 .form-cont{
-    align-self: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
     margin-top: 4px;
     margin-bottom: 1rem;
 }
@@ -56,6 +58,11 @@ body{
 	font-family: montserrat, sans-serif;
 	box-shadow: 0 0 5px rgba(0,0,0,0.2);
 	transition: 0.3s;
+}
+
+app-form{
+    width: 100%;
+    padding-right: 5px;
 }
 
 .btn > button:hover{
