Add hover effect on buttons

--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,7 +1,7 @@
 <div class="task-item">
     <div class="right">
         <div class="checkbox-cont">
-            <input type="checkbox" class="checkbox" (click)="Onclick($event)">
+            <input type="checkbox" class="checkbox" (click)="Onclick($event, task)">
         </div>
         <span>{{ task.task }}</span>
     </div>
