--- a/src/app/components/delete-btn/delete-btn.component.css
+++ b/src/app/components/delete-btn/delete-btn.component.css
@@ -9,5 +9,10 @@
 }
 
 .delete > button{
+	box-shadow: 0 0 15px rgba(0,0,0,0.6);
     font-size: 1.2rem;
+}
+
+.delete > button:hover{
+	box-shadow: 0 0 0px rgba(0,0,0,0.6);
 }
